--- a/_viewports.scss
+++ b/_viewports.scss
@@ -1,9 +1,9 @@
-$_viewport_config: (
+$_viewport_config:
     up-to  480px it-is "tiny",
     up-to  768px it-is "small",  // (portrait iPad width, for reference)
     up-to 1024px it-is "medium", // (landscape iPad width, for reference)
     beyond-that  it-is "large"
-    );
+    !default;
 
 //    What this configuration means is:
 //
@@ -11,6 +11,28 @@ $_viewport_config: (
 //    \__________/\__________/\__________/\____________...
 //       "tiny"      "small"    "medium"      "large"
 //       <-480       481-768    769-1024       1025->
+
+// Returns a boolean value indicating if the current $_viewport_config is properly formatted.
+//
+// Emits warnings accordingly, to help in debugging the config.
+//
+// @return boolean
+//
+@function validate-config() {
+    @for $i from 1 to length($_viewport_config) + 1 { // for each config row
+        $row: nth($_viewport_config, $i);
+        $isStandardRange: length($row) == 4 and nth($row, 1) == 'up-to' and nth($row, 3) == 'it-is';
+        $isUppermostRange: length($row) == 3 and nth($row, 1) == 'beyond-that' and nth($row, 2) == 'it-is';
+        @if (not $isStandardRange and not $isUppermostRange) {
+            @warn 'Invalid range specification format: #{$row}';
+            @return false;
+        } @else if ($isUppermostRange and $i == 1) {
+            @warn 'Found a "beyond-that" specification with no lower bound';
+            @return false;
+        }
+    }
+    @return true;
+}
 
 // Returns a tuple representing the range in which the given $namedRange applies.
 // For ranges that are unbound at either end, returns <false> for that end.
