Added a crude version of the query match table.

--- a/_viewports.scss
+++ b/_viewports.scss
@@ -135,7 +135,7 @@ $_viewport_config:
 
 @mixin viewports($queryConfig) {
 
-    $DEBUG: true;
+    $DEBUG: false;
     $VALID_TYPES: 'up-to' 'up-from' 'below' 'above' 'among' 'not';
     $DEFAULT_TYPE: 'among';
 
