--- a/test/spec/validate-config-6.scss
+++ b/test/spec/validate-config-6.scss
@@ -1,10 +1,9 @@
 $_viewport_config:
-    up-to  480px it-is "tiny" herp-derp,
-    beyond-that  it-is "large";
+    beyond-that it-is "tiny";
 
 @import "../../viewports";
 
-/* it won't validate a malformed config */
+/* it won't validate a single-specification config */
 
 p {
     content: "#{validate-config()}";
