--- a/test/spec/validate-config-5.scss
+++ b/test/spec/validate-config-5.scss
@@ -1,4 +1,4 @@
-$_viewport_config:
+$VIEWPORTS_CONFIG:
     up-to  480px it-is "tiny",
     beyond-that  it-is "large",
     up-to  768px it-is "small";
